manifest/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
      version: blue
  template:
    metadata:
      labels:
        app: demo
        version: blue
    spec:
      containers:
      - name: app
        image: hashicorp/http-echo
        args:
          - "-text=Hello from BLUE version"
        ports:
        - containerPort: 5678
