manifest/green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
      version: green
  template:
    metadata:
      labels:
        app: demo
        version: green
    spec:
      containers:
      - name: app
        image: hashicorp/http-echo
        args:
          - "-text=Hello from GREEN version"
        ports:
        - containerPort: 5678
