manifest/blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-blue
spec:
  selector:
    app: demo
    version: blue  # this line switches
  ports:
  - port: 80
    targetPort: 5678
