manifest/demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-svc
spec:
  selector:
    app: demo
    version: blue   # initial live version
  ports:
  - port: 80
    targetPort: 5678
