manifest/green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-green
spec:
  selector:
    app: demo
    version: green    # this line switches
  ports:
  - port: 80
    targetPort: 5678
